--- a/pod.yaml
+++ b/pod.yaml
@@ -2,8 +2,7 @@ apiVersion: v1
 kind: Pod
 metadata:
    name: nginx
-   lables: 
 spec:
    containers:
-      -name: nginx
-      image: nginx
+      - name: nginx
+        image: nginx:stable-perl
