--- a/labels.yaml
+++ b/labels.yaml
@@ -1,12 +1,13 @@
+kind: Pod
 apiVersion: v1
 kind: Pod
 metadata:
     name: labels
-    lables: 
+    labels: 
       project: expense
       module: backend
       environment: dev
 spec:
   containers:
-      -name: nginx
-       image: nginx
+      - name: nginx
+        image: nginx
