environments in kurnetes

--- a/env.yaml
+++ b/env.yaml
@@ -6,11 +6,10 @@ spec:
   containers:
      - name: nginx
        image: nginx
-     env:
-       - name: course
-         value: devops
-       - name: tainer
-         value: "ravikumar"
-       - name: duration
-         value: "120hrs"
-         
+       env:
+         - name: course
+           value: devops
+         - name: trainer
+           value: "ravikumar"
+         - name: duration
+           value: "120hrs"
