--- a/service.yaml
+++ b/service.yaml
@@ -6,22 +6,22 @@ metadata:
     project: expense
     module: backend
     environment: dev
-sepc:
+spec:
   containers:
   - name: nginx
     image: nginx
 ---
 kind: Service
 apiVersion: v1
-metadata: 
+metadata:
   name: nginx
 spec:
-  selector: 
+  selector:
     project: expense
     module: backend
     environment: dev
   ports:
   - name: nginx-svc-port
     protocol: TCP
-    port: 80
-    targetPort: 80
+    port: 80 # service port
+    targetPort: 80 # container port
