--- a/nodeport.yaml
+++ b/nodeport.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 metadata:
   name: nginx-service
 spec:
-  type: nodeport
+  type: NodePort
   selector:
     project: expense
     module: backend
