--- a/replicaset.yaml
+++ b/replicaset.yaml
@@ -25,3 +25,18 @@ spec:
       - name: nginx
         image: nginx:stable-perl
 
+--
+apiVersion: v1
+kind: Service
+metadata: 
+  name: nginx
+spec:
+ selector:
+    tier: frontend
+    app: nginx
+  ports:
+    - name: nginx-svc-port
+      protocol: TCP
+      port: 80
+      targetPort: 80
+      
