--- a/replicaset.yaml
+++ b/replicaset.yaml
@@ -28,14 +28,14 @@ spec:
 
 kind: Service
 apiVersion: v1
-metadata: 
+metadata:
   name: nginx
 spec:
- selector:
+  selector:
     tier: frontend
     app: nginx
   ports:
   - name: nginx-svc-port
     protocol: TCP
-    port: 80
-    targetPort: 80
+    port: 80 # service port
+    targetPort: 80 # container port
